@@ -79,7 +79,7 @@ sub create {
         ###
         ### `의류준비|탈의` -> `대여안함|포장|수선` 으로 이동했을때에 탈의실의 정리가 필요해서
         ### 이를 강조해주기 위한 데이터 추가
-        my $brain = OpenCloset::Brain->new;
+        my $brain = OpenCloset::Brain->new( redis => $self->redis );
         if (   $to == $OpenCloset::Status::STATUS_DO_NOT_RENTAL
             || $to == $OpenCloset::Status::STATUS_BOXING
             || $to == $OpenCloset::Status::STATUS_REPAIR )
@@ -128,7 +128,7 @@ sub create {
         my $ns  = $self->param('ns');
         my $key = $self->param('key');
 
-        my $brain = OpenCloset::Brain->new;
+        my $brain = OpenCloset::Brain->new( redis => $self->redis );
         if ( $brain->{data}{$ns}{$key} ) {
             delete $brain->{data}{$ns}{$key};
         }
