@@ -1,4 +1,5 @@
   - Save brain data explicitly for refresh room 
+  - Brain 을 file 대신에 redis 에 저장
 
 v0.6.2    Fri, 26 Feb 2016 12:03:54 +0900
   - 의류준비에서 상태가 변경되어도 정리가 필요한 탈의실 번호를 추적
